--- a/src/libBlitzAnalyze/Makefile.am
+++ b/src/libBlitzAnalyze/Makefile.am
@@ -2,7 +2,7 @@ lib_LTLIBRARIES = libBlitzAnalyze.la
 blitzanalyzeincludedir = $(pkgincludedir)/libBlitzAnalyze
 
 AM_CPPFLAGS = -I$(top_srcdir)/src $(BLITZ_CFLAGS)
-AM_LDFLAGS = -version-info 1:0:0
+AM_LDFLAGS = -no-undefined -version-info 1:0:0
 
 libBlitzAnalyze_la_LIBADD = $(BLITZ_LIBS)
 
