--- a/src/libIRoCS/Makefile.am
+++ b/src/libIRoCS/Makefile.am
@@ -1,23 +1,22 @@
 lib_LTLIBRARIES = libIRoCS.la
 irocsincludedir = $(pkgincludedir)/libIRoCS
 
-AM_CPPFLAGS = -I$(top_srcdir)/src $(BLITZ_CFLAGS) $(HDF5_CFLAGS) \
-	$(FFTW_CFLAGS) $(GSL_CFLAGS) $(OPENCV_CFLAGS)
+AM_CPPFLAGS = -I$(top_srcdir)/src \
+	$(GSL_CFLAGS) $(OPENCV_CFLAGS) $(BLITZ_CFLAGS) $(FFTW_CFLAGS) \
+	$(HDF5_CFLAGS)
 AM_CXXFLAGS = -Wno-long-long
-AM_LDFLAGS = -version-info 2:0:0 -rdynamic
+AM_LDFLAGS = -no-undefined -version-info 2:0:0 -rdynamic
 
 # Version bump to 3:0:0 pending (Interface change - removed liblabelling_qt4 dependencies)
 
 libIRoCS_la_LIBADD = \
-	$(top_builddir)/src/libsegmentation/libsegmentation.la \
 	$(top_builddir)/src/libArrayToolbox/libArrayToolbox.la \
+	$(top_builddir)/src/libBlitzFFTW/libBlitzFFTW.la \
 	$(top_builddir)/src/libBlitzHdf5/libBlitzHdf5.la \
-	$(top_builddir)/src/libBlitzAnalyze/libBlitzAnalyze.la \
 	$(top_builddir)/src/libProgressReporter/libProgressReporter.la \
+	$(top_builddir)/src/libBaseFunctions/libBaseFunctions.la \
 	$(top_builddir)/src/libsvmtl/libsvmtl.la \
-	$(top_builddir)/src/lmbs2kit/liblmbs2kit.la \
-	$(top_builddir)/src/libcmdline/libcmdline.la \
-	$(BLITZ_LIBS) $(HDF5_LIBS) $(FFTW_LIBS)
+	$(BLITZ_LIBS) $(HDF5_LIBS) $(FFTW_LIBS) $(GSL_LIBS) $(OPENCV_LIBS)
 
 irocsinclude_HEADERS = \
 	iRoCSFeatures.hh iRoCSFeatures.icc \
