--- a/test/libBlitz2DGraphics/Makefile.am
+++ b/test/libBlitz2DGraphics/Makefile.am
@@ -1,4 +1,4 @@
-TESTS =  testLibBlitzGraphics
+TESTS =  testLibBlitz2DGraphics
 
 check_PROGRAMS = $(TESTS)
 
@@ -7,4 +7,4 @@ AM_CXXFLAGS = -Wno-long-long
 
 LDADD = $(top_builddir)/src/libBlitzHdf5/libBlitzHdf5.la
 
-testLibBlitzGraphics_SOURCES  = testLibBlitzGraphics.cc
+testLibBlitz2DGraphics_SOURCES  = testLibBlitzGraphics.cc
