--- a/test/libBlitzFFTW/Makefile.am
+++ b/test/libBlitzFFTW/Makefile.am
@@ -9,5 +9,7 @@ AM_CXXFLAGS = -Wno-long-long
 LDADD = $(top_builddir)/src/libBlitzFFTW/libBlitzFFTW.la \
 	$(top_builddir)/src/libBaseFunctions/libBaseFunctions.la
 
+noinst_HEADERS = lmbunit.hh
+
 testBlitzFFTW_SOURCES = testBlitzFFTW.cc
 testBlitzFFTWFloat_SOURCES = testBlitzFFTWFloat.cc
