--- a/test/libProgressReporter/Makefile.am
+++ b/test/libProgressReporter/Makefile.am
@@ -5,7 +5,12 @@ check_PROGRAMS = $(TESTS)
 AM_CPPFLAGS = -I$(top_srcdir)/src
 AM_CXXFLAGS = -Wno-long-long
 
-LDADD = $(top_builddir)/src/libProgressReporter/libProgressReporter.la
+testProgressReporterStream_LDADD = \
+	$(top_builddir)/src/libProgressReporter/libProgressReporter.la
+testProgressReporterQt4_LDADD = \
+	$(top_builddir)/src/libProgressReporter_qt4/libProgressReporter_qt4.la
+
+noinst_HEADERS = lmbunit.hh
 
 testProgressReporterStream_SOURCES = testProgressReporterStream.cc
 testProgressReporterQt4_SOURCES = testProgressReporterQt4.cc
