--- a/test/libcmdline/Makefile.am
+++ b/test/libcmdline/Makefile.am
@@ -7,5 +7,7 @@ AM_CPPFLAGS = -I$(top_srcdir)/src
 
 LDADD = $(top_builddir)/src/libcmdline/libcmdline.la
 
+noinst_HEADERS = lmbunit.hh
+
 test_CmdLine_SOURCES = test_CmdLine.cc
 testCmdLine_SOURCES = testCmdLine.cc
