--- a/src/config.hh.in
+++ b/src/config.hh.in
@@ -36,6 +36,9 @@
 /* Define to 1 if you have the `fftw3f' library (-lfftw3f). */
 #undef HAVE_LIBFFTW3F
 
+/* Define to 1 if you have the `GL' library (-lGL). */
+#undef HAVE_LIBGL
+
 /* Define to 1 if you have the `GLU' library (-lGLU). */
 #undef HAVE_LIBGLU
 
@@ -60,8 +63,14 @@
 /* Define to 1 if you have the `opencv_imgproc' library (-lopencv_imgproc). */
 #undef HAVE_LIBOPENCV_IMGPROC
 
+/* Define to 1 if you have the `opengl32' library (-lopengl32). */
+#undef HAVE_LIBOPENGL32
+
 /* Define to 1 if you have the `png' library (-lpng). */
 #undef HAVE_LIBPNG
+
+/* Define to 1 if you have the `png12' library (-lpng12). */
+#undef HAVE_LIBPNG12
 
 /* Define to 1 if you have the `pthread' library (-lpthread). */
 #undef HAVE_LIBPTHREAD
@@ -141,6 +150,12 @@
 
 /* Define to the version of this package. */
 #undef PACKAGE_VERSION
+
+/* Enable Qt debugging */
+#undef QT_DEBUG
+
+/* Disable Qt debugging */
+#undef QT_NO_DEBUG
 
 /* Define to 1 if you have the ANSI C header files. */
 #undef STDC_HEADERS
