--- a/src/labelling/Makefile.in
+++ b/src/labelling/Makefile.in
@@ -99,16 +99,18 @@ labelling_DEPENDENCIES =  \
 	$(top_builddir)/src/liblabelling_qt4/libLabelling_qt4.la \
 	$(top_builddir)/src/libsegmentation/libsegmentation.la \
 	$(top_builddir)/src/libArrayToolbox/libArrayToolbox.la \
+	$(top_builddir)/src/libBlitzFFTW/libBlitzFFTW.la \
 	$(top_builddir)/src/libBlitzHdf5/libBlitzHdf5.la \
+	$(top_builddir)/src/libBaseFunctions/libBaseFunctions.la \
+	$(top_builddir)/src/lmbs2kit/liblmbs2kit.la \
 	$(top_builddir)/src/libBlitzAnalyze/libBlitzAnalyze.la \
 	$(top_builddir)/src/libProgressReporter_qt4/libProgressReporter_qt4.la \
 	$(top_builddir)/src/libProgressReporter/libProgressReporter.la \
-	$(top_builddir)/src/libsvmtl/libsvmtl.la \
-	$(top_builddir)/src/lmbs2kit/liblmbs2kit.la \
 	$(top_builddir)/src/libcmdline/libcmdline.la \
 	$(am__DEPENDENCIES_1) $(am__DEPENDENCIES_1) \
 	$(am__DEPENDENCIES_1) $(am__DEPENDENCIES_1) \
-	$(am__DEPENDENCIES_1)
+	$(am__DEPENDENCIES_1) $(am__DEPENDENCIES_1) \
+	$(am__DEPENDENCIES_1) $(am__DEPENDENCIES_1)
 AM_V_lt = $(am__v_lt_@AM_V@)
 am__v_lt_ = $(am__v_lt_@AM_DEFAULT_V@)
 am__v_lt_0 = --silent
@@ -178,6 +180,7 @@ ACLOCAL = @ACLOCAL@
 AMTAR = @AMTAR@
 AM_DEFAULT_VERBOSITY = @AM_DEFAULT_VERBOSITY@
 AR = @AR@
+AS = @AS@
 AUTOCONF = @AUTOCONF@
 AUTOHEADER = @AUTOHEADER@
 AUTOMAKE = @AUTOMAKE@
@@ -213,6 +216,8 @@ FFTW_STATIC_LIBS = @FFTW_STATIC_LIBS@
 FGREP = @FGREP@
 GLU_CFLAGS = @GLU_CFLAGS@
 GLU_LIBS = @GLU_LIBS@
+GL_CFLAGS = @GL_CFLAGS@
+GL_LIBS = @GL_LIBS@
 GREP = @GREP@
 GSL_CFLAGS = @GSL_CFLAGS@
 GSL_LIBS = @GSL_LIBS@
@@ -244,11 +249,11 @@ MANIFEST_TOOL = @MANIFEST_TOOL@
 MKDIR_P = @MKDIR_P@
 NM = @NM@
 NMEDIT = @NMEDIT@
+NONCONSOLE_LDFLAGS = @NONCONSOLE_LDFLAGS@
 OBJDUMP = @OBJDUMP@
 OBJEXT = @OBJEXT@
 OPENCV_CFLAGS = @OPENCV_CFLAGS@
 OPENCV_LIBS = @OPENCV_LIBS@
-OPENCV_STATIC_CFLAGS = @OPENCV_STATIC_CFLAGS@
 OPENCV_STATIC_LIBS = @OPENCV_STATIC_LIBS@
 OPENMP_CXXFLAGS = @OPENMP_CXXFLAGS@
 OPENMP_LIBS = @OPENMP_LIBS@
@@ -265,6 +270,10 @@ PATH_SEPARATOR = @PATH_SEPARATOR@
 PKG_CONFIG = @PKG_CONFIG@
 PKG_CONFIG_LIBDIR = @PKG_CONFIG_LIBDIR@
 PKG_CONFIG_PATH = @PKG_CONFIG_PATH@
+PNG_CFLAGS = @PNG_CFLAGS@
+PNG_LIBS = @PNG_LIBS@
+PNG_STATIC_CFLAGS = @PNG_STATIC_CFLAGS@
+PNG_STATIC_LIBS = @PNG_STATIC_LIBS@
 QT4_CFLAGS = @QT4_CFLAGS@
 QT4_LIBS = @QT4_LIBS@
 QT4_MOC = @QT4_MOC@
@@ -338,19 +347,21 @@ AM_CPPFLAGS = -I$(top_srcdir)/src $(BLITZ_CFLAGS) $(HDF5_CFLAGS) \
 	$(FFTW_CFLAGS) $(GSL_CFLAGS) $(OPENCV_CFLAGS) $(QT4_CFLAGS)
 
 AM_CXXFLAGS = -Wno-long-long 
-AM_LDFLAGS = -rdynamic
+AM_LDFLAGS = $(NONCONSOLE_LDFLAGS)
 labelling_LDADD = \
 	$(top_builddir)/src/liblabelling_qt4/libLabelling_qt4.la \
 	$(top_builddir)/src/libsegmentation/libsegmentation.la \
 	$(top_builddir)/src/libArrayToolbox/libArrayToolbox.la \
+	$(top_builddir)/src/libBlitzFFTW/libBlitzFFTW.la \
 	$(top_builddir)/src/libBlitzHdf5/libBlitzHdf5.la \
+	$(top_builddir)/src/libBaseFunctions/libBaseFunctions.la \
+	$(top_builddir)/src/lmbs2kit/liblmbs2kit.la \
 	$(top_builddir)/src/libBlitzAnalyze/libBlitzAnalyze.la \
 	$(top_builddir)/src/libProgressReporter_qt4/libProgressReporter_qt4.la \
 	$(top_builddir)/src/libProgressReporter/libProgressReporter.la \
-	$(top_builddir)/src/libsvmtl/libsvmtl.la \
-	$(top_builddir)/src/lmbs2kit/liblmbs2kit.la \
 	$(top_builddir)/src/libcmdline/libcmdline.la \
-	$(BLITZ_LIBS) $(HDF5_LIBS) $(FFTW_LIBS) $(QT4_LIBS) $(GLU_LIBS)
+	$(BLITZ_LIBS) $(HDF5_LIBS) $(FFTW_LIBS) $(GSL_LIBS) $(OPENCV_LIBS) \
+	$(QT4_LIBS) $(GL_LIBS) $(GLU_LIBS)
 
 labelling_SOURCES = labelling.cc
 all: all-am
