--- a/src/libBlitz2DGraphics/Makefile.am
+++ b/src/libBlitz2DGraphics/Makefile.am
@@ -1,11 +1,14 @@
 lib_LTLIBRARIES = libBlitz2DGraphics.la
 blitz2dgraphicsincludedir = $(pkgincludedir)/libBlitz2DGraphics
 
-AM_CPPFLAGS = -I$(top_srcdir)/src $(BLITZ_CFLAGS) $(TIFF_CFLAGS) $(JPEG_CFLAGS)
+AM_CPPFLAGS = \
+	-I$(top_srcdir)/src $(BLITZ_CFLAGS) $(PNG_CFLAGS) \
+	$(TIFF_CFLAGS) $(JPEG_CFLAGS)
 AM_CXXFLAGS = -Wno-long-long
-AM_LDFLAGS = -version-info 1:1:0
+AM_LDFLAGS = -no-undefined -version-info 1:1:0
 
-libBlitz2DGraphics_la_LIBADD = $(BLITZ_LIBS) $(TIFF_LIBS) $(JPEG_LIBS)
+libBlitz2DGraphics_la_LIBADD = \
+	$(BLITZ_LIBS) $(PNG_LIBS) $(TIFF_LIBS) $(JPEG_LIBS)
 
 blitz2dgraphicsinclude_HEADERS = \
 	Blitz2DGraphics.hh \
