--- a/src/libBlitz2DGraphics/Makefile.in
+++ b/src/libBlitz2DGraphics/Makefile.in
@@ -122,7 +122,8 @@ am__installdirs = "$(DESTDIR)$(libdir)" \
 LTLIBRARIES = $(lib_LTLIBRARIES)
 am__DEPENDENCIES_1 =
 libBlitz2DGraphics_la_DEPENDENCIES = $(am__DEPENDENCIES_1) \
-	$(am__DEPENDENCIES_1) $(am__DEPENDENCIES_1)
+	$(am__DEPENDENCIES_1) $(am__DEPENDENCIES_1) \
+	$(am__DEPENDENCIES_1)
 am_libBlitz2DGraphics_la_OBJECTS = ImageAccessWrapper.lo \
 	BlitzImageReader.lo BlitzImageWriter.lo BlitzRGBColor.lo \
 	ColorConvert.lo
@@ -197,6 +198,7 @@ ACLOCAL = @ACLOCAL@
 AMTAR = @AMTAR@
 AM_DEFAULT_VERBOSITY = @AM_DEFAULT_VERBOSITY@
 AR = @AR@
+AS = @AS@
 AUTOCONF = @AUTOCONF@
 AUTOHEADER = @AUTOHEADER@
 AUTOMAKE = @AUTOMAKE@
@@ -232,6 +234,8 @@ FFTW_STATIC_LIBS = @FFTW_STATIC_LIBS@
 FGREP = @FGREP@
 GLU_CFLAGS = @GLU_CFLAGS@
 GLU_LIBS = @GLU_LIBS@
+GL_CFLAGS = @GL_CFLAGS@
+GL_LIBS = @GL_LIBS@
 GREP = @GREP@
 GSL_CFLAGS = @GSL_CFLAGS@
 GSL_LIBS = @GSL_LIBS@
@@ -263,11 +267,11 @@ MANIFEST_TOOL = @MANIFEST_TOOL@
 MKDIR_P = @MKDIR_P@
 NM = @NM@
 NMEDIT = @NMEDIT@
+NONCONSOLE_LDFLAGS = @NONCONSOLE_LDFLAGS@
 OBJDUMP = @OBJDUMP@
 OBJEXT = @OBJEXT@
 OPENCV_CFLAGS = @OPENCV_CFLAGS@
 OPENCV_LIBS = @OPENCV_LIBS@
-OPENCV_STATIC_CFLAGS = @OPENCV_STATIC_CFLAGS@
 OPENCV_STATIC_LIBS = @OPENCV_STATIC_LIBS@
 OPENMP_CXXFLAGS = @OPENMP_CXXFLAGS@
 OPENMP_LIBS = @OPENMP_LIBS@
@@ -284,6 +288,10 @@ PATH_SEPARATOR = @PATH_SEPARATOR@
 PKG_CONFIG = @PKG_CONFIG@
 PKG_CONFIG_LIBDIR = @PKG_CONFIG_LIBDIR@
 PKG_CONFIG_PATH = @PKG_CONFIG_PATH@
+PNG_CFLAGS = @PNG_CFLAGS@
+PNG_LIBS = @PNG_LIBS@
+PNG_STATIC_CFLAGS = @PNG_STATIC_CFLAGS@
+PNG_STATIC_LIBS = @PNG_STATIC_LIBS@
 QT4_CFLAGS = @QT4_CFLAGS@
 QT4_LIBS = @QT4_LIBS@
 QT4_MOC = @QT4_MOC@
@@ -354,10 +362,15 @@ top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 lib_LTLIBRARIES = libBlitz2DGraphics.la
 blitz2dgraphicsincludedir = $(pkgincludedir)/libBlitz2DGraphics
-AM_CPPFLAGS = -I$(top_srcdir)/src $(BLITZ_CFLAGS) $(TIFF_CFLAGS) $(JPEG_CFLAGS)
+AM_CPPFLAGS = \
+	-I$(top_srcdir)/src $(BLITZ_CFLAGS) $(PNG_CFLAGS) \
+	$(TIFF_CFLAGS) $(JPEG_CFLAGS)
+
 AM_CXXFLAGS = -Wno-long-long
-AM_LDFLAGS = -version-info 1:1:0
-libBlitz2DGraphics_la_LIBADD = $(BLITZ_LIBS) $(TIFF_LIBS) $(JPEG_LIBS)
+AM_LDFLAGS = -no-undefined -version-info 1:1:0
+libBlitz2DGraphics_la_LIBADD = \
+	$(BLITZ_LIBS) $(PNG_LIBS) $(TIFF_LIBS) $(JPEG_LIBS)
+
 blitz2dgraphicsinclude_HEADERS = \
 	Blitz2DGraphics.hh \
         ImageAccessWrapper.hh \
