--- a/src/libBlitzHdf5/Makefile.am
+++ b/src/libBlitzHdf5/Makefile.am
@@ -3,7 +3,7 @@ blitzhdf5includedir = $(pkgincludedir)/libBlitzHdf5
 
 AM_CPPFLAGS = -I$(top_srcdir)/src $(BLITZ_CFLAGS) $(HDF5_CFLAGS)
 AM_CXXFLAGS = -Wno-long-long
-AM_LDFLAGS = -version-info 3:0:2
+AM_LDFLAGS = -no-undefined -version-info 3:0:2
 
 libBlitzHdf5_la_LIBADD = \
 	$(top_builddir)/src/libProgressReporter/libProgressReporter.la \
