--- a/src/libProgressReporter_qt4/Makefile.am
+++ b/src/libProgressReporter_qt4/Makefile.am
@@ -3,17 +3,21 @@ progressreporterincludedir = $(pkgincludedir)/libProgressReporter_qt4
 
 MOC = @QT4_MOC@
 
-AM_CPPFLAGS = -I$(top_srcdir)/src
-AM_CXXFLAGS = -Wno-long-long $(QT4_CFLAGS)
-AM_LDFLAGS = -version-info 0:0:0
+AM_CPPFLAGS = -I$(top_srcdir)/src $(QT4_CFLAGS)
+AM_CXXFLAGS = -Wno-long-long
+AM_LDFLAGS = -no-undefined -version-info 0:0:0
 
-libProgressReporter_qt4_la_LIBADD = $(QT4_LIBS)
+libProgressReporter_qt4_la_LIBADD = \
+	$(top_builddir)/src/libProgressReporter/libProgressReporter.la \
+	$(QT4_LIBS)
 
 MOC_GEN_SOURCES = \
 	moc_ProgressReporterQt4.cc
 
 libProgressReporter_qt4_la_SOURCES = \
-	ProgressReporterQt4.cc \
+	ProgressReporterQt4.cc
+
+nodist_libProgressReporter_qt4_la_SOURCES = \
 	$(MOC_GEN_SOURCES)
 
 progressreporterinclude_HEADERS = \
