--- a/src/libProgressReporter_qt4/Makefile.in
+++ b/src/libProgressReporter_qt4/Makefile.in
@@ -121,12 +121,14 @@ am__installdirs = "$(DESTDIR)$(libdir)" \
 	"$(DESTDIR)$(progressreporterincludedir)"
 LTLIBRARIES = $(lib_LTLIBRARIES)
 am__DEPENDENCIES_1 =
-libProgressReporter_qt4_la_DEPENDENCIES = $(am__DEPENDENCIES_1)
+libProgressReporter_qt4_la_DEPENDENCIES = $(top_builddir)/src/libProgressReporter/libProgressReporter.la \
+	$(am__DEPENDENCIES_1)
+am_libProgressReporter_qt4_la_OBJECTS = ProgressReporterQt4.lo
 am__objects_1 = moc_ProgressReporterQt4.lo
-am_libProgressReporter_qt4_la_OBJECTS = ProgressReporterQt4.lo \
-	$(am__objects_1)
+nodist_libProgressReporter_qt4_la_OBJECTS = $(am__objects_1)
 libProgressReporter_qt4_la_OBJECTS =  \
-	$(am_libProgressReporter_qt4_la_OBJECTS)
+	$(am_libProgressReporter_qt4_la_OBJECTS) \
+	$(nodist_libProgressReporter_qt4_la_OBJECTS)
 AM_V_lt = $(am__v_lt_@AM_V@)
 am__v_lt_ = $(am__v_lt_@AM_DEFAULT_V@)
 am__v_lt_0 = --silent
@@ -165,7 +167,8 @@ AM_V_CXXLD = $(am__v_CXXLD_@AM_V@)
 am__v_CXXLD_ = $(am__v_CXXLD_@AM_DEFAULT_V@)
 am__v_CXXLD_0 = @echo "  CXXLD   " $@;
 am__v_CXXLD_1 = 
-SOURCES = $(libProgressReporter_qt4_la_SOURCES)
+SOURCES = $(libProgressReporter_qt4_la_SOURCES) \
+	$(nodist_libProgressReporter_qt4_la_SOURCES)
 DIST_SOURCES = $(libProgressReporter_qt4_la_SOURCES)
 am__can_run_installinfo = \
   case $$AM_UPDATE_INFO_DIR in \
@@ -197,6 +200,7 @@ ACLOCAL = @ACLOCAL@
 AMTAR = @AMTAR@
 AM_DEFAULT_VERBOSITY = @AM_DEFAULT_VERBOSITY@
 AR = @AR@
+AS = @AS@
 AUTOCONF = @AUTOCONF@
 AUTOHEADER = @AUTOHEADER@
 AUTOMAKE = @AUTOMAKE@
@@ -232,6 +236,8 @@ FFTW_STATIC_LIBS = @FFTW_STATIC_LIBS@
 FGREP = @FGREP@
 GLU_CFLAGS = @GLU_CFLAGS@
 GLU_LIBS = @GLU_LIBS@
+GL_CFLAGS = @GL_CFLAGS@
+GL_LIBS = @GL_LIBS@
 GREP = @GREP@
 GSL_CFLAGS = @GSL_CFLAGS@
 GSL_LIBS = @GSL_LIBS@
@@ -263,11 +269,11 @@ MANIFEST_TOOL = @MANIFEST_TOOL@
 MKDIR_P = @MKDIR_P@
 NM = @NM@
 NMEDIT = @NMEDIT@
+NONCONSOLE_LDFLAGS = @NONCONSOLE_LDFLAGS@
 OBJDUMP = @OBJDUMP@
 OBJEXT = @OBJEXT@
 OPENCV_CFLAGS = @OPENCV_CFLAGS@
 OPENCV_LIBS = @OPENCV_LIBS@
-OPENCV_STATIC_CFLAGS = @OPENCV_STATIC_CFLAGS@
 OPENCV_STATIC_LIBS = @OPENCV_STATIC_LIBS@
 OPENMP_CXXFLAGS = @OPENMP_CXXFLAGS@
 OPENMP_LIBS = @OPENMP_LIBS@
@@ -284,6 +290,10 @@ PATH_SEPARATOR = @PATH_SEPARATOR@
 PKG_CONFIG = @PKG_CONFIG@
 PKG_CONFIG_LIBDIR = @PKG_CONFIG_LIBDIR@
 PKG_CONFIG_PATH = @PKG_CONFIG_PATH@
+PNG_CFLAGS = @PNG_CFLAGS@
+PNG_LIBS = @PNG_LIBS@
+PNG_STATIC_CFLAGS = @PNG_STATIC_CFLAGS@
+PNG_STATIC_LIBS = @PNG_STATIC_LIBS@
 QT4_CFLAGS = @QT4_CFLAGS@
 QT4_LIBS = @QT4_LIBS@
 QT4_MOC = @QT4_MOC@
@@ -355,15 +365,20 @@ top_srcdir = @top_srcdir@
 lib_LTLIBRARIES = libProgressReporter_qt4.la
 progressreporterincludedir = $(pkgincludedir)/libProgressReporter_qt4
 MOC = @QT4_MOC@
-AM_CPPFLAGS = -I$(top_srcdir)/src
-AM_CXXFLAGS = -Wno-long-long $(QT4_CFLAGS)
-AM_LDFLAGS = -version-info 0:0:0
-libProgressReporter_qt4_la_LIBADD = $(QT4_LIBS)
+AM_CPPFLAGS = -I$(top_srcdir)/src $(QT4_CFLAGS)
+AM_CXXFLAGS = -Wno-long-long
+AM_LDFLAGS = -no-undefined -version-info 0:0:0
+libProgressReporter_qt4_la_LIBADD = \
+	$(top_builddir)/src/libProgressReporter/libProgressReporter.la \
+	$(QT4_LIBS)
+
 MOC_GEN_SOURCES = \
 	moc_ProgressReporterQt4.cc
 
 libProgressReporter_qt4_la_SOURCES = \
-	ProgressReporterQt4.cc \
+	ProgressReporterQt4.cc
+
+nodist_libProgressReporter_qt4_la_SOURCES = \
 	$(MOC_GEN_SOURCES)
 
 progressreporterinclude_HEADERS = \
