--- a/src/libsegmentation/Makefile.am
+++ b/src/libsegmentation/Makefile.am
@@ -4,11 +4,16 @@ segmentationincludedir = $(pkgincludedir)/libsegmentation
 AM_CPPFLAGS = -I$(top_srcdir)/src $(BLITZ_CFLAGS) $(HDF5_CFLAGS) \
 	$(FFTW_CFLAGS) $(GSL_CFLAGS) $(OPENCV_CFLAGS)
 AM_CXXFLAGS = -Wno-long-long
-AM_LDFLAGS = -version-info 1:0:0
+AM_LDFLAGS = -no-undefined -version-info 1:0:0
 
 libsegmentation_la_LIBADD = \
 	$(top_builddir)/src/libArrayToolbox/libArrayToolbox.la \
-	$(top_builddir)/src/lmbs2kit/liblmbs2kit.la
+	$(top_builddir)/src/libBlitzFFTW/libBlitzFFTW.la \
+	$(top_builddir)/src/libBlitzHdf5/libBlitzHdf5.la \
+	$(top_builddir)/src/libProgressReporter/libProgressReporter.la \
+	$(top_builddir)/src/libBaseFunctions/libBaseFunctions.la \
+	$(top_builddir)/src/lmbs2kit/liblmbs2kit.la \
+	$(BLITZ_LIBS) $(HDF5_LIBS) $(FFTW_LIBS) $(GSL_LIBS) $(OPENCV_LIBS)
 
 segmentationinclude_HEADERS = \
 	EdgeFilter.hh EdgeFilter-inl.hh \
