--- a/test/lmbs2kit/Makefile.am
+++ b/test/lmbs2kit/Makefile.am
@@ -5,4 +5,6 @@ AM_CPPFLAGS = -I$(top_srcdir)/src
 
 LDADD = $(top_builddir)/src/lmbs2kit/liblmbs2kit.la
 
+noinst_HEADERS = lmbunit.hh
+
 testlmbs2kit_SOURCES = testlmbs2kit.cc
